--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>İbrahim BAYRAMLI</title>
     <style>
       body{
-            background-image: url(arkaplan.png);
+            background-image: url(arkaplan.jpg);
             background-position: center;
 
 
