--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyworda" content="mühendislik,engineering,software,yazılım">
+    <meta name="description" content="Kişisel web sitem">
+    <meta name="author" content="İbrahim BAYRAMLI">
     <title>İbrahim BAYRAMLI</title>
     <style>
       body{
