--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>İbrahim BAYRAMLI</title>
-    <meta name="description" content="" />
-    <meta name="author" content="Tooplate" />
+    <meta name="description" content="portfolio" />
+    <meta name="author" content="ibrahimbayramli" />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Additional CSS Files -->
